# promo-roi-platform

./: .gitignore  README.md  check_drift.py  check_shap_importance.py  cloudbuild.yaml  get_one_row.py  load_test.py  main.py  pyproject.toml  submit_batch_job.py  submit_training_job.py  submit_tuning_job.py  submit_tuning_job_salesfit.py
data/notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb
data/schemas/: feature_schema.json
demo/: next.config.js  package-lock.json  package.json  tailwind.config.ts
docs/: 00_project_overview.md  01_data_layer.md  02_docker_concepts.md  03_kubernetes_concepts.md  04_vertex_ai_training.md  05_serving_layer.md  06_mlops_pipelines.md  07_cicd_cloud_build.md  08_monitoring.md  09_shap_explainability.md  10_ranker_lambdamart.md  11_interview_prep.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  prometheus-config.yaml  prometheus-deployment.yaml  service.yaml
mini_exercise/: cleanup_endpoint.py  create_batch_input.py  deploy_endpoint.py  model.bst  register_model.py  test_endpoint.py  train_for_registry.py
mlflow_local/: mlflow.db
pipeline/: promo_pipeline.py
pipelines/: hello_pipeline_v3.yaml  promo_pipeline.py  promo_pipeline.yaml  simple_pipeline.py  submit_pipeline.py  submit_promo_pipeline.py
ranker/: rank_utils.py  requirements.txt  train_ranker.py
serving/: Dockerfile  app.py  model_utils.py  requirements.txt  schemas.py
tests/: test_feature_utils.py  test_label_engineering.py  test_serving.py
training/: Dockerfile  feature_utils.py  label_engineering.py  requirements.txt  train.py  tune.py
(+15 files in other folders)
