[project]
name = "promo-roi-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black==24.8.0",
    "db-dtypes>=1.7.0",
    "evidently>=0.7.21",
    "fastapi>=0.136.3",
    "google-cloud-aiplatform>=1.157.0",
    "httpx2>=2.4.0",
    "kfp>=2.16.1",
    "mlflow>=3.13.0",
    "pytest==8.3.2",
    "ruff==0.6.9",
    "shap>=0.52.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=8.3.2",
    "pytest-anyio>=0.0.0",
]
